Don't set shownRatio in main thread top controls on animated state change.

In r399036 I made the main thread set the shown ratio as soon as a state change
came in so that the updated window height would be available to script
immediately. This causes problems when the state change is animated since the
compositor thread will try to animate to the state and it'll fight with the
commited value coming from the main thread.

This CL simply disables the main thread behavior when the state change should be
animated, relying on the compositor to drive the animation.

BUG=623183

Review-Url: https://codereview.chromium.org/2105523002
Cr-Commit-Position: refs/heads/master@{#402867}

Former-commit-id: 849f8df4aa51c333cd14286b51673acc90e9b862